jenkins-k8s/shared/nexus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: utilities
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 200
      containers:
      - name: nexus
        image: sonatype/nexus3:latest
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "2"
        readinessProbe:
          httpGet:
            path: /service/rest/v1/status
            port: 8081
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /service/rest/v1/status
            port: 8081
          initialDelaySeconds: 120
          periodSeconds: 30
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-data
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: utilities
spec:
  selector:
    app: nexus
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
